--- a/.travis.yml
+++ b/.travis.yml
@@ -32,4 +32,4 @@ env:
    # Github Pages
    # - GH_REF: github.com/LyneLiu/lyneliu.github.io  这里替换你的github仓库地址
    # Coding Pages
-   - CO_REF: git.coding.net/lyneliu/lyneliu.git
+   - CO_REF: git@git.dev.tencent.com:lyneliu/lyneliu.git
