--- a/.travis.yml
+++ b/.travis.yml
@@ -35,4 +35,4 @@ env:
    # Coding Pages
    # - CO_REF: git@git.dev.tencent.com:lyneliu/lyneliu.git
    # Gitee Pages
-   - GITEE_REPO: gitee.com:.lyne/lyne.git
+   - GITEE_REPO: git@gitee.com:.lyne/lyne.git
