--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ after_script:
   # Coding Pages
   # - git push --force --quiet "https://lyneliu:${CO_TOKEN}@${CO_REF}" master:master
   # Gitee Pages
-  - git push --force --quiet "https://.lyne:${GITEE_TOKEN}@${GITEE_REPO}" master:master
+  - git push --force --quiet "https://lyneliu:${GITEE_TOKEN}@${GITEE_REPO}" master:master
 branches:
   only:
   - master 
@@ -35,4 +35,4 @@ env:
    # Coding Pages
    # - CO_REF: git@git.dev.tencent.com:lyneliu/lyneliu.git
    # Gitee Pages
-   - GITEE_REPO: gitee.com/.lyne/lyne.git
+   - GITEE_REPO: gitee.com/lyneliu/lyne.git
