--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,6 @@ env:
    # Github Pages
    - GH_REF: github.com/LyneLiu/myblog.git
    # Coding Pages
-   - CO_REF: git.coding.net/lyneliu/lyneliu.git
+   - CO_REF: git.coding.net/lyneliu/myblog.git
    # Gitee Pages
-   - GITEE_REPO: gitee.com/lyneliu/lyne.git
+   - GITEE_REPO: gitee.com/lyneliu/myblog.git
