--- a/.travis.yml
+++ b/.travis.yml
@@ -35,4 +35,4 @@ env:
    # Coding Pages
    - CO_REF: git.coding.net/lyneliu/myblog.git
    # Gitee Pages
-   - GITEE_REPO: gitee.com/lyneliu/myblog.git
+   - GITEE_REPO: gitee.com/lyneliu/lyne.git
